--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-Hello World it's lucas
-change test
+<html>
+  <body>
+    <p>Hello World it's lucas</p>
+    <p>change test</p>
+    <p>ok cool coool</p>
+  </body>
+</html>
+    
