--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <body>
     <p>Hello World it's lucas</p>
     <p>change test</p>
-    <p>ok cool coool</p>
+    <p style="color: paleturquoise;">ok cool coool</p>
   </body>
 </html>
     
